feat: add content in index.html and styles in style.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,129 @@
+<!-- @format -->
+
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <nav class="navigate">
+          <a href="#about">About me</a>
+          <a href="#contact">Contacts</a>
+          <a href="#skills">Skills</a>
+          <a href="#strength">Strengths</a>
+          <a href="#education">Education</a>
+          <a href="#projects">Projects</a>
+        </nav>
+      </header>
+      <main class="main-content">
+        <div class="left-section">
+          <img
+            src="./images/photo_2024-07-07_19-11-47.jpg"
+            alt="ava"
+            class="avatar"
+          />
+          <div class="contact-info" id="contact">
+            <h2>Contact</h2>
+            <ul>
+              <li>Phone:<a href="#"> +375 44 546-02-43</a></li>
+              <li>E-mail: <a href="#">krisbubenka@icloud.com</a></li>
+              <li>Address: Gomel, Belarus</li>
+            </ul>
+          </div>
+          <div class="education-info" id="education">
+            <h2>Education</h2>
+            <ul>
+              <li>
+                Belarusian National Technical University Specialty: Information
+                technology software
+              </li>
+              <li>IT-Academy HTML/CSS JavaScript</li>
+            </ul>
+          </div>
+        </div>
+        <div class="right-section">
+          <div class="main-info">
+            <h1>Kristina Buben</h1>
+            <p>Frontend Developer</p>
+          </div>
+          <div class="about-me-info" id="about">
+            <h2>About me</h2>
+            <p>
+              I am 20 years old, I am studying to be a frontend developer. I
+              really need an activity where I can develop throughout my life.
+              That’s why I’m here. My goal is to learn about development on the
+              front lines.
+            </p>
+          </div>
+          <div class="skills-info" id="skills">
+            <h2>Skills</h2>
+            <ul>
+              <li>HTML</li>
+              <li>CSS (Bootstrap, SASS/SCSS, BEM)</li>
+              <li>
+                JavaScript (Fundamentals, ES6+, DOM, JSON, Asynchronous
+                JavaScript)
+              </li>
+              <li>Git/GitHub</li>
+              <li>English - A2 (B1 in process…)</li>
+            </ul>
+          </div>
+          <div class="strengths-info" id="strength">
+            <h2>Skills Strengths</h2>
+            <ul>
+              <li>Quick learner</li>
+              <li>Full immersion in the essence of the problems</li>
+              <li>Diligence</li>
+              <li>Team playing</li>
+              <li>Keep learning</li>
+            </ul>
+          </div>
+          <div>
+            <h2>Code example</h2>
+            <code>
+              function bmi(weight, height) {
+              <br />
+              const bmi = weight / (height * height);
+              <br />
+              return bmi <= 18.5 ? ‘Underweight’ : bmi <= 25 ? ‘Normal’ : bmi <=
+              30 ? ‘Overweight’ : ‘Obese’;
+              <br />
+              }
+            </code>
+          </div>
+          <div class="projects-info" id="projects">
+            <h2>My projects</h2>
+            <a
+              href="https://github.com/Kristina0606/ROBO.SCHOOL"
+              target="_blank"
+              >ROBO SCHOOL</a
+            >
+            <a
+              href="https://github.com/Kristina0606/graduate-js-project"
+              target="_blank"
+              >MovieMingle</a
+            >
+          </div>
+        </div>
+      </main>
+      <footer>
+        <a href="https://github.com/Kristina0606" target="_blank">GitHub</a>
+        <p>2024</p>
+        <a
+          href="https://rs.school/courses/javascript-preschool-ru"
+          target="_blank"
+          ><img
+            src="./images/rs-school-logo.svg"
+            alt="logo-rs-school"
+            width="100"
+            height="100"
+        /></a>
+      </footer>
+    </div>
+  </body>
 </html>
