--- a/shelter/index.html
+++ b/shelter/index.html
@@ -38,21 +38,51 @@
             <h1 class="app-header__content__left__title">
               Not only people<br />need a house
             </h1>
-            <h2 class="app-header__content__left__subtitle">
+            <p class="app-header__content__left__subtitle">
               We offer to give a chance to a little and nice puppy with an
               extremely<br />wide and open heart. He or she will love you more
               than anybody else<br />in the world, you will see!
-            </h2>
+            </p>
             <button class="app-header__content__left__knopka" type="button">
               <span>Make a friend</span>
             </button>
           </div>
           <div class="first-page__content__right">
-            <img src="./images/start-screen-puppy.png" alt="puppy-img" />
+            <img
+              src="./images/start-screen-puppy.png"
+              alt="puppy-img"
+              class="puppy-img"
+            />
           </div>
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="second-page">
+        <div class="container1">
+          <div class="container1-left">
+            <img src="./images/about-pets.png" alt="about-pets-img" />
+          </div>
+          <div class="container1-right">
+            <h2>About the shelter “<br />Cozy House”</h2>
+            <p>
+              Currently we have 121 dogs and 342 cats on our hands and<br />
+              statistics show that only 20% of them will find a family. The<br />
+              others will continue to live with us and will be waiting for a
+              lucky<br />
+              chance to become dearly loved.
+            </p>
+            <p>
+              We feed our wards with the best food and make sure that they<br />do
+              not get sick, feel comfortable (including psychologically) and<br />
+              well. We are supported by 87 volunteers and 28 employees of<br />
+              various skill levels. About 12% of the animals are taken by the<br />
+              shelter staff. Taking care of the animals, they become attached<br />to
+              the pets and would hardly ever leave them alone.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
