add third page and card-container

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -83,6 +83,65 @@
           </div>
         </div>
       </div>
+      <div class="third-page">
+        <div class="third-page_content">
+          <h2 class="third-page_title">
+            Our friends who<br />are looking for a house
+          </h2>
+          <div class="cards-container">
+            <button type="button" class="container-btn">
+              <img src="./images/button_arrow_left.png" alt="btn-left" />
+            </button>
+            <div class="cards">
+              <div class="card">
+                <div class="card-img">
+                  <img src="./images/pets-katrine.png" alt="cat-img" />
+                </div>
+                <div class="card-name">
+                  <h4>Katrine</h4>
+                </div>
+                <div>
+                  <button type="button" class="card-btn">
+                    <span>Learn more</span>
+                  </button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img">
+                  <img src="./images/pets-jennifer.png" alt="puppy-img" />
+                </div>
+                <div class="card-name">
+                  <h4>Jennifer</h4>
+                </div>
+                <div>
+                  <button type="button" class="card-btn">
+                    <span>Learn more</span>
+                  </button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img">
+                  <img src="./images/pets-woody.png" alt="dog-img" />
+                </div>
+                <div class="card-name">
+                  <h4>Woody</h4>
+                </div>
+                <div>
+                  <button type="button" class="card-btn">
+                    <span>Learn more</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="container-btn">
+              <img src="./images/button_arrow_right.png" alt="btn-right" />
+            </button>
+          </div>
+          <button class="button2" type="button">
+            <span>Get to know the rest</span>
+          </button>
+        </div>
+      </div>
     </main>
   </body>
 </html>
