feat: complete shelter task

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -17,22 +17,32 @@
           /></a>
         </div>
         <div class="app-header__components__set-of-links">
-          <div class="app-header__components__set-of-links__link1">
-            <a href="#about">About the shelter</a>
+          <div>
+            <a href="#about" class="ind-link">About the shelter</a>
           </div>
-          <div class="app-header__components__set-of-links__link2">
-            <a href="#pets">Our pets</a>
+          <div>
+            <a
+              href="./index2.html"
+              class="app-header__components__set-of-links__link1"
+              >Our pets</a
+            >
           </div>
-          <div class="app-header__components__set-of-links__link3">
-            <a href="#help">Help the shelter</a>
+          <div>
+            <a href="#help" class="app-header__components__set-of-links__link1"
+              >Help the shelter</a
+            >
           </div>
-          <div class="app-header__components__set-of-links__link4">
-            <a href="#price">Contacts</a>
+          <div>
+            <a
+              href="#contacts"
+              class="app-header__components__set-of-links__link1"
+              >Contacts</a
+            >
           </div>
         </div>
       </div>
 
-      <div class="first-page">
+      <div class="not-only">
         <div class="first-page__content">
           <div class="first-page__content__left">
             <h1 class="app-header__content__left__title">
@@ -58,7 +68,7 @@
       </div>
     </header>
     <main>
-      <div class="second-page">
+      <div class="about" id="about">
         <div class="container1">
           <div class="container1-left">
             <img src="./images/about-pets.png" alt="about-pets-img" />
@@ -83,7 +93,7 @@
           </div>
         </div>
       </div>
-      <div class="third-page">
+      <div class="our-friends">
         <div class="third-page_content">
           <h2 class="third-page_title">
             Our friends who<br />are looking for a house
@@ -93,7 +103,7 @@
               <img src="./images/button_arrow_left.png" alt="btn-left" />
             </button>
             <div class="cards">
-              <div class="card">
+              <a href="#" class="card">
                 <div class="card-img">
                   <img src="./images/pets-katrine.png" alt="cat-img" />
                 </div>
@@ -105,8 +115,8 @@
                     <span>Learn more</span>
                   </button>
                 </div>
-              </div>
-              <div class="card">
+              </a>
+              <a href="#" class="card">
                 <div class="card-img">
                   <img src="./images/pets-jennifer.png" alt="puppy-img" />
                 </div>
@@ -118,8 +128,8 @@
                     <span>Learn more</span>
                   </button>
                 </div>
-              </div>
-              <div class="card">
+              </a>
+              <a href="#" class="card">
                 <div class="card-img">
                   <img src="./images/pets-woody.png" alt="dog-img" />
                 </div>
@@ -131,7 +141,7 @@
                     <span>Learn more</span>
                   </button>
                 </div>
-              </div>
+              </a>
             </div>
             <button type="button" class="container-btn">
               <img src="./images/button_arrow_right.png" alt="btn-right" />
@@ -142,6 +152,118 @@
           </button>
         </div>
       </div>
+      <div class="help" id="help">
+        <div class="fourth-page_content">
+          <div>
+            <h2 class="fourth-page_title">How you can help<br />our shelter</h2>
+          </div>
+          <div class="icons">
+            <figure class="icon-fig">
+              <img src="./images/Vector1.png" alt="vector-icon" />
+              <figcaption>Pet food</figcaption>
+            </figure>
+            <figure class="icon-fig">
+              <img src="./images/transportation.png" alt="transport-icon" />
+              <figcaption>Transportation</figcaption>
+            </figure>
+
+            <figure class="icon-fig">
+              <img src="./images/toys.png" alt="toy-icon" />
+              <figcaption>Toys</figcaption>
+            </figure>
+
+            <figure class="icon-fig">
+              <img src="./images/bowls-and-cups.png" alt="bowls-icon" />
+              <figcaption>Bowls and cups</figcaption>
+            </figure>
+
+            <figure class="icon-fig">
+              <img src="./images/shampoos.png" alt="shampoos-icon" />
+              <figcaption>Shampoos</figcaption>
+            </figure>
+
+            <figure class="icon-fig">
+              <img src="./images/vitamins.png" alt="vitamins-icon" />
+              <figcaption>Vitamins</figcaption>
+            </figure>
+
+            <figure class="icon-fig">
+              <img src="./images/medicines.png" alt="medicines-icon" />
+              <figcaption>Medicines</figcaption>
+            </figure>
+
+            <figure class="icon-fig">
+              <img src="./images/collars-or-leashes.png" alt="collars-icon" />
+              <figcaption>Collars / leashes</figcaption>
+            </figure>
+
+            <figure class="icon-fig">
+              <img src="./images/sleeping-area.png" alt="sleeping-area-icon" />
+              <figcaption>Sleeping areas</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+      <div class="in-addition">
+        <div class="fifth-page-content">
+          <div class="left-cont">
+            <img src="./images/donation-dog.png" alt="donation-dog-img" />
+          </div>
+          <div class="right-cont">
+            <h2 class="fifth-subtitle">You can also<br />make a donation</h2>
+            <p class="fifth-page-info">
+              Name of the bank / Type of bank account
+            </p>
+            <button type="button" class="fifth-page-button">
+              <img src="./images/credit-card.svg" alt="card-logo" />
+              <span>8380 2880 8028 8791 7435</span>
+            </button>
+            <p class="more-info">
+              Legal information and lorem ipsum dolor sit amet, consectetur<br />
+              adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed
+              ac<br />diam. Praesent ultrices maximus tortor et vulputate.
+              Interdum et<br />malesuada fames ac ante ipsum primis in faucibus.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer class="footer-page" id="contacts">
+      <div class="footer-content">
+        <div class="footer-content-left">
+          <h3 class="footer-st1">For questions<br />and suggestions</h3>
+          <a href="mailto: email@shelter.com" class="footer-link">
+            <img src="./images/mail.png" alt="mail-img" />
+            <h4 class="link-info">email@shelter.com</h4>
+          </a>
+          <a href="tel: +13 674 567 75 54" class="footer-link">
+            <img src="./images/icon-phone.svg" alt="tel-img" />
+            <h4 class="link-info">+13 674 567 75 54</h4>
+          </a>
+        </div>
+        <div class="footer-content-center">
+          <h3 class="footer-st2">We are waiting<br />for your visit</h3>
+          <a
+            href="https://maps.app.goo.gl/YFMHEsim9Vvk88Fv9"
+            class="footer-link"
+          >
+            <img src="./images/pin.png" alt="pin-img" />
+            <h4 class="link-info">
+              1 Central Street, Boston (<br />entrance from the store)
+            </h4>
+          </a>
+          <a
+            href="https://maps.app.goo.gl/QV4cGyuDRiHTwwyA6"
+            class="footer-link"
+          >
+            <img src="./images/pin.png" alt="pin-img" />
+            <h4 class="link-info">18 South Park, London</h4>
+          </a>
+        </div>
+        <div class="footer-content-right">
+          <img src="./images/footer-puppy.png" alt="puppy-img" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
