fix: fixed class name

--- a/shelter/index2.html
+++ b/shelter/index2.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </header>
-    <main class="main-page">
+    <main class="our-friends">
       <div class="pets-card-container">
         <h3 class="cont-title">
           Our friends who<br />
