--- a/shelter/index2.html
+++ b/shelter/index2.html
@@ -17,6 +17,10 @@
             <p>Shelter for pets in Boston</p>
           </a>
         </div>
+        <button class="burger-btn" id="burger-btn">
+          <span class="btn-span"></span><span class="btn-span"></span
+          ><span class="btn-span"></span>
+        </button>
         <div class="app-header__components__set-of-links">
           <div>
             <a
@@ -89,7 +93,7 @@
               </button>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="#" class="card sophia-card">
             <div class="card-img">
               <img src="./images/pets-katrine2.png" alt="puppy-img" />
             </div>
@@ -102,7 +106,7 @@
               </button>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="#" class="card timmy-card">
             <div class="card-img">
               <img src="./images/pets-timmy.png" alt="cat-img" />
             </div>
@@ -115,7 +119,7 @@
               </button>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="#" class="card charly-card">
             <div class="card-img">
               <img src="./images/pets-charly.png" alt="dog-img" />
             </div>
@@ -128,7 +132,7 @@
               </button>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="#" class="card pred-last-card">
             <div class="card-img">
               <img src="./images/pets-scarlet.png" alt="dog-img" />
             </div>
@@ -141,7 +145,7 @@
               </button>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="#" class="card last-card">
             <div class="card-img">
               <img src="./images/pets-katrine3.png" alt="cat-img" />
             </div>
@@ -186,40 +190,44 @@
     </main>
     <footer class="footer-page" id="contacts">
       <div class="footer-content">
-        <div class="footer-content-left">
-          <h3 class="footer-st1">For questions<br />and suggestions</h3>
-          <a href="mailto: email@shelter.com" class="footer-link">
-            <img src="./images/mail.png" alt="mail-img" />
-            <h4 class="link-info">email@shelter.com</h4>
-          </a>
-          <a href="tel: +13 674 567 75 54" class="footer-link">
-            <img src="./images/icon-phone.svg" alt="tel-img" />
-            <h4 class="link-info">+13 674 567 75 54</h4>
-          </a>
+        <div class="footer-text">
+          <div class="footer-content-left">
+            <h3 class="footer-st1">For questions<br />and suggestions</h3>
+            <a href="mailto: email@shelter.com" class="footer-link">
+              <img src="./images/mail.png" alt="mail-img" />
+              <h4 class="link-info">email@shelter.com</h4>
+            </a>
+            <a href="tel: +13 674 567 75 54" class="footer-link">
+              <img src="./images/icon-phone.svg" alt="tel-img" />
+              <h4 class="link-info">+13 674 567 75 54</h4>
+            </a>
+          </div>
+          <div class="footer-content-center">
+            <h3 class="footer-st2">We are waiting<br />for your visit</h3>
+            <a
+              href="https://maps.app.goo.gl/YFMHEsim9Vvk88Fv9"
+              class="footer-link"
+            >
+              <img src="./images/pin.png" alt="pin-img" />
+              <h4 class="link-info">
+                1 Central Street, Boston (<br />entrance from the store)
+              </h4>
+            </a>
+            <a
+              href="https://maps.app.goo.gl/QV4cGyuDRiHTwwyA6"
+              class="footer-link"
+            >
+              <img src="./images/pin.png" alt="pin-img" />
+              <h4 class="link-info">18 South Park, London</h4>
+            </a>
+          </div>
         </div>
-        <div class="footer-content-center">
-          <h3 class="footer-st2">We are waiting<br />for your visit</h3>
-          <a
-            href="https://maps.app.goo.gl/YFMHEsim9Vvk88Fv9"
-            class="footer-link"
-          >
-            <img src="./images/pin.png" alt="pin-img" />
-            <h4 class="link-info">
-              1 Central Street, Boston (<br />entrance from the store)
-            </h4>
-          </a>
-          <a
-            href="https://maps.app.goo.gl/QV4cGyuDRiHTwwyA6"
-            class="footer-link"
-          >
-            <img src="./images/pin.png" alt="pin-img" />
-            <h4 class="link-info">18 South Park, London</h4>
-          </a>
-        </div>
+
         <div class="footer-content-right">
           <img src="./images/footer-puppy.png" alt="puppy-img" />
         </div>
       </div>
     </footer>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
