--- a/shelter/index.html
+++ b/shelter/index.html
@@ -23,7 +23,11 @@
           </button>
           <div class="app-header__components__set-of-links">
             <div>
-              <a href="#about" class="ind-link">About the shelter</a>
+              <a
+                href="#about"
+                class="ind-link app-header__components__set-of-links__link1"
+                >About the shelter</a
+              >
             </div>
             <div>
               <a
