add base slider and slider to media query

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -117,52 +117,143 @@
               Our friends who<br />are looking for a house
             </h2>
             <div class="cards-container">
-              <button type="button" class="container-btn dekstop-btn">
-                <img src="./images/button_arrow_left.png" alt="btn-left" />
+              <button type="button" class="container-btn dekstop-btn btn-back">
+                <img
+                  src="./images/button_arrow_left.png"
+                  alt="btn-left"
+                  class="img-slider-back"
+                />
               </button>
-              <div class="cards">
-                <a href="#" class="card katrine-card">
-                  <div class="card-img">
-                    <img src="./images/pets-katrine.png" alt="cat-img" />
+              <div class="cards-slider">
+                <div class="slider-line">
+                  <div class="card1">
+                    <a href="#" class="card katrine-card">
+                      <div class="card-img">
+                        <img src="./images/pets-katrine.png" alt="cat-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Katrine</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                  <div class="card-name">
-                    <h4>Katrine</h4>
+                  <div class="card2">
+                    <a href="#" class="card jennifer-card">
+                      <div class="card-img">
+                        <img src="./images/pets-jennifer.png" alt="puppy-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Jennifer</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                  <div>
-                    <button type="button" class="card-btn">
-                      <span>Learn more</span>
-                    </button>
+                  <div class="card3">
+                    <a href="#" class="card woody-card">
+                      <div class="card-img">
+                        <img src="./images/pets-woody.png" alt="dog-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Woody</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                </a>
-                <a href="#" class="card jennifer-card">
-                  <div class="card-img">
-                    <img src="./images/pets-jennifer.png" alt="puppy-img" />
+                  <div class="card4">
+                    <a href="#" class="card sophia-card">
+                      <div class="card-img">
+                        <img src="./images/pets-katrine2.png" alt="puppy-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Sophia</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                  <div class="card-name">
-                    <h4>Jennifer</h4>
+                  <div class="card5">
+                    <a href="#" class="card timmy-card">
+                      <div class="card-img">
+                        <img src="./images/pets-timmy.png" alt="cat-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Timmy</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                  <div>
-                    <button type="button" class="card-btn">
-                      <span>Learn more</span>
-                    </button>
+                  <div class="card6">
+                    <a href="#" class="card charly-card">
+                      <div class="card-img">
+                        <img src="./images/pets-charly.png" alt="dog-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Charly</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                </a>
-                <a href="#" class="card woody-card">
-                  <div class="card-img">
-                    <img src="./images/pets-woody.png" alt="dog-img" />
+                  <div class="card7">
+                    <a href="#" class="card pred-last-card">
+                      <div class="card-img">
+                        <img src="./images/pets-scarlet.png" alt="dog-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Scarlet</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                  <div class="card-name">
-                    <h4>Woody</h4>
+                  <div class="card8">
+                    <a href="#" class="card last-card">
+                      <div class="card-img">
+                        <img src="./images/pets-katrine3.png" alt="cat-img" />
+                      </div>
+                      <div class="card-name">
+                        <h4>Freddie</h4>
+                      </div>
+                      <div>
+                        <button type="button" class="card-btn">
+                          <span>Learn more</span>
+                        </button>
+                      </div>
+                    </a>
                   </div>
-                  <div>
-                    <button type="button" class="card-btn">
-                      <span>Learn more</span>
-                    </button>
-                  </div>
-                </a>
+                </div>
               </div>
-              <button type="button" class="container-btn dekstop-btn">
-                <img src="./images/button_arrow_right.png" alt="btn-right" />
+              <button type="button" class="container-btn dekstop-btn btn-next">
+                <img
+                  src="./images/button_arrow_right.png"
+                  alt="btn-right"
+                  class="img-slider-next"
+                />
               </button>
               <div class="mobile-buttons">
                 <button type="button" class="container-btn">
