--- a/shelter/index.html
+++ b/shelter/index.html
@@ -256,10 +256,10 @@
                 />
               </button>
               <div class="mobile-buttons">
-                <button type="button" class="container-btn">
+                <button type="button" class="mobile-btn-back container-btn">
                   <img src="./images/button_arrow_left.png" alt="btn-left" />
                 </button>
-                <button type="button" class="container-btn">
+                <button type="button" class="mobile-btn-next container-btn">
                   <img src="./images/button_arrow_right.png" alt="btn-right" />
                 </button>
               </div>
