add adaptive pagination

--- a/shelter/index2.html
+++ b/shelter/index2.html
@@ -53,8 +53,86 @@
           Our friends who<br />
           are looking for a house
         </h3>
-        <div class="cards-pets">
-          <a href="#" class="card">
+
+        <div class="cards-pets" id="cards-container"></div>
+
+        <div class="nav-cards pagination-buttons" id="pagination">
+          <img
+            src="./images/button_paginator4.png"
+            alt="nav-double-left"
+            class="nav-double-left"
+          />
+
+          <div class="btn-pag-back">
+            <img
+              src="./images/button_paginator2.png"
+              alt="nav-left"
+              class="nav-left"
+            />
+          </div>
+          <span class="page-number" id="page-number">1</span>
+          <div class="btn-pag-next">
+            <img
+              src="./images/button_paginator2.png"
+              alt="nav-right"
+              class="nav-right navBtn"
+            />
+          </div>
+          <div class="last-btn">
+            <img
+              src="./images/button_paginator4.png"
+              alt="nav-double-right"
+              class="nav-double-right navBtn"
+            />
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer-page" id="contacts">
+      <div class="footer-content">
+        <div class="footer-text">
+          <div class="footer-content-left">
+            <h3 class="footer-st1">For questions<br />and suggestions</h3>
+            <a href="mailto: email@shelter.com" class="footer-link">
+              <img src="./images/mail.png" alt="mail-img" />
+              <h4 class="link-info">email@shelter.com</h4>
+            </a>
+            <a href="tel: +13 674 567 75 54" class="footer-link">
+              <img src="./images/icon-phone.svg" alt="tel-img" />
+              <h4 class="link-info">+13 674 567 75 54</h4>
+            </a>
+          </div>
+          <div class="footer-content-center">
+            <h3 class="footer-st2">We are waiting<br />for your visit</h3>
+            <a
+              href="https://maps.app.goo.gl/YFMHEsim9Vvk88Fv9"
+              class="footer-link"
+            >
+              <img src="./images/pin.png" alt="pin-img" />
+              <h4 class="link-info">
+                1 Central Street, Boston (<br />entrance from the store)
+              </h4>
+            </a>
+            <a
+              href="https://maps.app.goo.gl/QV4cGyuDRiHTwwyA6"
+              class="footer-link"
+            >
+              <img src="./images/pin.png" alt="pin-img" />
+              <h4 class="link-info">18 South Park, London</h4>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-content-right">
+          <img src="./images/footer-puppy.png" alt="puppy-img" />
+        </div>
+      </div>
+    </footer>
+    <script type="module" src="main.js"></script>
+  </body>
+</html>
+
+<!-- <a href="#" class="card">
             <div class="card-img">
               <img src="./images/pets-katrine.png" alt="cat-img" />
             </div>
@@ -157,77 +235,4 @@
                 <span>Learn more</span>
               </button>
             </div>
-          </a>
-        </div>
-        <div class="nav-cards">
-          <img
-            src="./images/button_paginator3.png"
-            alt="nav-double-left"
-            class="nav-double-left navBtn"
-          />
-          <img
-            src="./images/button_paginator.png"
-            alt="nav-left"
-            class="nav-left navBtn"
-          />
-          <img
-            src="./images/button_paginator_center.png"
-            alt="number"
-            class="number navBtn"
-          />
-          <img
-            src="./images/button_paginator2.png"
-            alt="nav-right"
-            class="nav-right navBtn"
-          />
-          <img
-            src="./images/button_paginator4.png"
-            alt="nav-double-right"
-            class="nav-double-right navBtn"
-          />
-        </div>
-      </div>
-    </main>
-    <footer class="footer-page" id="contacts">
-      <div class="footer-content">
-        <div class="footer-text">
-          <div class="footer-content-left">
-            <h3 class="footer-st1">For questions<br />and suggestions</h3>
-            <a href="mailto: email@shelter.com" class="footer-link">
-              <img src="./images/mail.png" alt="mail-img" />
-              <h4 class="link-info">email@shelter.com</h4>
-            </a>
-            <a href="tel: +13 674 567 75 54" class="footer-link">
-              <img src="./images/icon-phone.svg" alt="tel-img" />
-              <h4 class="link-info">+13 674 567 75 54</h4>
-            </a>
-          </div>
-          <div class="footer-content-center">
-            <h3 class="footer-st2">We are waiting<br />for your visit</h3>
-            <a
-              href="https://maps.app.goo.gl/YFMHEsim9Vvk88Fv9"
-              class="footer-link"
-            >
-              <img src="./images/pin.png" alt="pin-img" />
-              <h4 class="link-info">
-                1 Central Street, Boston (<br />entrance from the store)
-              </h4>
-            </a>
-            <a
-              href="https://maps.app.goo.gl/QV4cGyuDRiHTwwyA6"
-              class="footer-link"
-            >
-              <img src="./images/pin.png" alt="pin-img" />
-              <h4 class="link-info">18 South Park, London</h4>
-            </a>
-          </div>
-        </div>
-
-        <div class="footer-content-right">
-          <img src="./images/footer-puppy.png" alt="puppy-img" />
-        </div>
-      </div>
-    </footer>
-    <script type="module" src="main.js"></script>
-  </body>
-</html>
+          </a> -->
